# Sentiment-Analysis-of-YouTube-Comments-using-NLP-and-Machine-Learning

./: AGENTS.md  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg
data/: generate_sample_dataset.py  sample_comments.csv
tests/: test_modules.py  test_pipeline.py
youtube_sentiment/: __init__.py  cleaning.py  cli.py  config.py  data_collection.py  language_detection.py  pipeline.py  preprocessing.py  visualization.py
youtube_sentiment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
